--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -91,6 +91,14 @@
             <input type="text" id="username" name="username" required>
         </div>
         <div class="form-group">
+            <label for="lastname">Фамилия:</label>
+            <input type="text" id="lastname" name="lastname" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Электронная почта:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
             <label for="password">Пароль:</label>
             <input type="password" id="password" name="password" required>
         </div>
